--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag mikkhola/ianseo:$(date +%s)
+      run: docker build . --file Dockerfile --tag mikkhola/ianseo:latest
       
     - name: Docker Push
       run: docker push mikkhola/ianseo
